--- a/RDataScience.Rmd
+++ b/RDataScience.Rmd
@@ -2420,17 +2420,17 @@ str_commasep(c("a", "b", "c"))
 * End with `ing` or `ise`
 
 ```{r charex1}
-str_view(stringr::words, "^[aeiou]")
-str_view(stringr::words, "^[^aeiou]+$", match = TRUE)
-str_view(stringr::words, "^ed$|[^e]ed$", match = TRUE)
-str_view(stringr::words, "i(ng|se)$", match = TRUE)
+# str_view(stringr::words, "^[aeiou]")
+# str_view(stringr::words, "^[^aeiou]+$", match = TRUE)
+# str_view(stringr::words, "^ed$|[^e]ed$", match = TRUE)
+# str_view(stringr::words, "i(ng|se)$", match = TRUE)
 ```
 
 2. Empirically verify the rule "i before e except after c"
 
 ```{r charex2}
-str_view(stringr::words, "(cei|[^c]ie)", match = TRUE)
-str_view(stringr::words, "(cie|[^c]ei)", match = TRUE)
+# str_view(stringr::words, "(cei|[^c]ie)", match = TRUE)
+# str_view(stringr::words, "(cie|[^c]ei)", match = TRUE)
 
 # Using str_detect()
 sum(str_detect(stringr::words, "(cei|[^c]ie)"))
@@ -2471,7 +2471,7 @@ Can specify the number of matches:
 
 Parentheses define "groups" that you can refer with _backreferences_, like `\1`, `\2` etc. For example, the following regular expression finds all fruits that have a repeated pair of letters.
 ```{r strviewfruits}
-str_view(fruit, "(..)\\1", match = TRUE)
+# str_view(fruit, "(..)\\1", match = TRUE)
 ```
 
 #### 14.3.5.1 Exercises
@@ -2488,20 +2488,20 @@ str_view(fruit, "(..)\\1", match = TRUE)
 
 ```{r strviewex2}
 # Start and end with the same character
-str_view(words, "^(.).*\\1$", match = TRUE)
+# str_view(words, "^(.).*\\1$", match = TRUE)
 
 # Contain a repeated pair of letters (e.g. "church") contains "ch" repeated twice
 
 # Any two characters repeated
-str_view(words, "(..).*\\1", match = TRUE)
+# str_view(words, "(..).*\\1", match = TRUE)
 
 # More stringent, letters only, but also allowing for differences in capitalization
-str_view(str_to_lower(words), "([a-z][a-z]).*\\1", match = TRUE)
+#str_view(str_to_lower(words), "([a-z][a-z]).*\\1", match = TRUE)
 ```
 
-3. Conatins one letter repeated in at least three places (e.g. "eleven" contains three "e"s)
+3. Contains one letter repeated in at least three places (e.g. "eleven" contains three "e"s)
 ```{r strviewex3}
-str_view(words, "(.).*\\1.*\\1", match = TRUE)
+# str_view(words, "(.).*\\1.*\\1", match = TRUE)
 ```
 
 ### 14.4 Tools
@@ -2531,7 +2531,6 @@ str_subset(words, "x$")
 x <- c("apple", "banana", "pear")
 str_count(x, "a")
 mean(str_count(words, "[aeiou]"))
-
 ```
 
 #### 14.4.2 Exercises
@@ -2564,4 +2563,191 @@ words[str_detect(words, "a") &
 prop_vowels <- str_count(words, "[aeiou]") / str_length(words)
 words[which(prop_vowels == max(prop_vowels))]
 ```
+
+#### 14.4.3 Extract matches
+
+`str_extract()` is used to extract the actual text of a match.
+
+```{r extract1}
+length(sentences)
+head(sentences)
+colours <- c("red", "orange", "yellow", "green", "blue", "purple")
+colour_match <- str_c(colours, collapse = "|")
+colour_match
+
+# Can select sentences that contain a colour, and extract the colour to 
+# figure out which one it is
+has_colour <- str_subset(sentences, colour_match)
+matches <- str_extract(has_colour, colour_match)
+head(matches)
+
+more <- sentences[str_count(sentences, colour_match) > 1]
+str_view_all(more, colour_match)
+
+str_extract(more, colour_match)
+
+# The _all version returns lists
+str_extract_all(more, colour_match)
+
+# By setting simplify = TRUE, it returns a matrix
+str_extract_all(more, colour_match, simplify = TRUE)
+x <- c("a", "a b", "a b c")
+str_extract_all(x, "[a-z]", simplify = TRUE)
+```
+
+**Exercises**
+
+1. In the previous example, the regular expression matched "flickered", which is not a color. Modify it.
+
+Add the `\b` before and after the pattern
+```{r extractex1}
+colour_match2 <- str_c("\\b(", str_c(colours, collapse = "|"), ")\\b")
+colour_match2
+more2 <- sentences[str_count(sentences, colour_match) > 1]
+str_view_all(more2, colour_match2, match = TRUE)
+```
+
+2. Find the first word from each sentence
+```{r extractex2}
+str_extract(sentences, "[a-zA-X]+") %>% head()
+```
+
+3. All words ending in `ing`:
+```{r extractex3}
+pattern <- "\\b[A-Za-z]+ing\\b"
+sentences_with_ing <- str_detect(sentences, pattern)
+unique(unlist(str_extract_all(sentences[sentences_with_ing], pattern))) %>%
+  head()
+```
+
+#### 14.4.4 Grouped matches
+
+If we want to extract nouns from the sentences. Look at any word that comes after "a" or "the".
+
+```{r groupedmatches1}
+noun <- "(a|the) ([^ ]+)"
+
+has_noun <- sentences %>%
+  str_subset(noun) %>%
+  head(10)
+has_noun %>% 
+  str_extract(noun)
+
+# str_match() gives each individual components
+has_noun %>% 
+  str_match(noun)
+```
+
+**Exercises**
+
+1. Find all words that come after a number.
+
+```{r groupedmatchex1}
+numword <- "(one|two|three|four|five|six|seven|eight|nine|ten) +(\\S+)"
+sentences[str_detect(sentences, numword)] %>%
+  str_extract(numword)
+```
+
+2. Find all contractions. Separate out the pieces before and after teh apostrophe.
+```{r groupedmatchex2}
+contraction <- "([A-Za-z]+)'([A-Za-z]+)"
+sentences %>%
+  `[`(str_detect(sentences, contraction)) %>%
+  str_extract(contraction)
+```
+
+#### 14.4.5 Replacing matches
+
+`str_replace()` and `str_replace_all()` allow you to replace matches with new strings. The simplest use is to replace a pattern with a fixed string:
+
+```{r strreplace1}
+x <- c("apple", "pear", "banana")
+str_replace(x, "[aeiou]", "-")
+str_replace_all(x, "[aeiou]", "-")
+x <- c("1 house", "2 cars", "3 people")
+str_replace_all(x, c("1" = "one", "2" = "two", "3" = "three"))
+```
+
+#### 14.4.6 Splitting
+
+Use `str_split()` to split a string up into pieces.
+```{r strsplit1}
+sentences %>%
+  head(5) %>%
+  str_split(" ")
+
+# Can use simplify to return a matrix
+sentences %>%
+  head(5) %>% 
+  str_split(" ", simplify = TRUE)
+```
+
+Instead of splitting up strings by patterns, you can also split up by character, line, sentence and word `boundary()`s:
+```{r strsplit2}
+x <- "This is a sentence.  This is another sentence."
+str_view_all(x, boundary("word"))
+str_split(x, " ")[[1]]
+str_split(x, boundary("word"))[[1]]
+```
+
+**Exercises**
+
+1. Split up a string like `"apples, pears, and bananas"` into individual components.
+```{r strsplitex1}
+x <- c("apples, pears, and bananas")
+str_split(x, ", +(and +)?")[[1]]
+```
+
+2. Why is it better to split up by `boundary("word")` than `" "`?
+Spltting by `boundary("word")` splits on punctuation and not just whitespace.
+
+3. What does splitting with an empty (`""`) do?
+```{r strsplitex2}
+str_split("ab. cd|agt", "")[[1]]
+```
+
+It splits the string into individual characters.
+
+* `str_locate` and `str_locate_all()` give you the starting and ending positions of each match. Can use `str_locate()` to find the matching pattern, `str_sub()` to extract and/or modify them.
+
+### 14.5 Other types
+
+* `ignore_case = TRUE` allows characters to match either their uppercase or lowercase forms.
+
+* `multiline = TRUE` allows `^` and `$` to match the start and end of each line rather than the start and end of the complete string.
+
+* `comments = TRUE` allows you to use comments and white space to make complex regular expressions more understandable. Spaces are ignored, as is everything after `#`. To match a literal space, you'll need to escape it: `"\\ "`.
+
+* `dotall = TRUE` allows `.` to match everything, including `\n`.
+
+* `fixed()`: matches exactly the specified sequence of bytes. It ignores all special regular expressions.
+
+* `coll()`: compare strings using standard **coll**ation rues. Useful for doing case insensitive matching. Relatively slow compared to `fixed()` and `regex()`.
+
+**Exercises**
+
+1. How would you find all strings containing `\` with `regex()` vs. with `fixed()`?
+```{r strotherex1}
+str_subset(c("a\\b", "ab"), "\\\\")
+str_subset(c("a\\b", "ab"), fixed("\\"))
+```
+
+2. What are the five most common words in sentences?
+```{r strotherex2}
+str_extract_all(sentences, boundary("word")) %>%
+  unlist() %>%
+  str_to_lower() %>%
+  tibble() %>%
+  set_names("word") %>%
+  group_by(word) %>%
+  count(sort = TRUE) %>%
+  head(5)
+```
+
+### 14.7 stringi functions
+
+1. `stri_count_words`: counts the number of words
+2. `stri_duplicated`: finds duplicated strings
+3. `stri_rand_`, `stri_rand_lipsum`, `stri_rand_strings`, `stri_rand_shuffle`: generates random text
+4. Use `locale` argument to control the language that `stri_sort()` uses for sorting.
 
