jennybc purrr tutorial

--- a/Purrr/purrr_cwickham.Rmd
+++ b/Purrr/purrr_cwickham.Rmd
@@ -2,7 +2,9 @@
 title: "Purrr - Wickham"
 author: "Miguel Arias"
 date: "9/13/2017"
-output: html_document
+output: 
+  html_document: 
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
